--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "rollup --config --watch"
   },
   "devDependencies": {
+    "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "rollup": "^2.67.0",
