--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "strict": true,
-    "module": "esnext"
+    "module": "esnext",
+    "moduleResolution": "node",
+    "inlineSources": true,
+    "target": "ES2018"
   }
 }
